create Ad check license
