# app/Component/Ad/Infrastructure/Service/AdService.php
@@ -5,6 +5,8 @@ namespace App\Component\Ad\Infrastructure\Service;
 use AllowDynamicProperties;
 use App\Component\Ad\Application\Service\AdServiceInterface;
 use App\Component\Ad\Application\Repository\AdRepository;
+use App\Component\Ad\Infrastructure\Http\Request\CheckAdLicenseRequest;
+use Illuminate\Contracts\Auth\Authenticatable;
 use Illuminate\Support\Facades\Hash;
 use App\Component\Ad\Presentation\ViewQuery\AdViewQueryInterface;
 use Illuminate\Support\Str;
@@ -39,5 +41,15 @@ class AdService implements AdServiceInterface
     public function find($id)
     {
         // TODO: Implement find() method.
+    }
+
+    public function CheckIsExitAd(int|string $license_number): mixed
+    {
+        return $this->adRepository->CheckIsExitAd($license_number);
+    }
+
+    public function CheckAdLicense(CheckAdLicenseRequest $request, ?Authenticatable $user)
+    {
+        return $this->adRepository->CheckAdLicense($request,$user);
     }
 }
